immich/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: immich-http-route
  namespace: immich
spec:
  parentRefs:
    - name: immich-gateway
      kind: Gateway
      sectionName: http
      group: gateway.networking.k8s.io
  hostnames:
    - immich.raft.lutris.house
  rules:
    - backendRefs:
        - name: immich-server
          kind: Service
          group: ""
          port: 2283
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
